@@ -411,3 +411,4 @@ N(OP_RaidJoin),
 N(OP_Translocate),
 N(OP_Sacrifice),
 N(OP_KeyRing), 
+N(OP_PopupResponse),
