@@ -440,6 +440,7 @@ OP_OpenDiscordMerchant=0x0000	#8 bytes
 OP_DiscordMerchantInventory=0x0000	#long item packet
 OP_GiveMoney=0x56d4	#16 bytes, pp, gp, sp, cp. 
 OP_OnLevelMessage=0x1dde
+OP_PopupResponse=0x3816
 OP_RequestKnowledgeBase=0x7584
 OP_KnowledgeBase=0x4a52
 OP_PlayerUnderWorld=0x46d9
