@@ -455,6 +455,7 @@ OP_OpenDiscordMerchant=0x0000	#8 bytes
 OP_DiscordMerchantInventory=0x0000	#long item packet
 OP_GiveMoney=0x0000	#16 bytes, pp, gp, sp, cp. 
 OP_OnLevelMessage=0x1dde
+OP_PopupResponse=0x3816
 OP_RequestKnowledgeBase=0x0000
 OP_KnowledgeBase=0x0000
 OP_SlashAdventure=0x571a	# /adventure
