@@ -28,6 +28,7 @@ typedef enum {
 	EVENT_TASK_STAGE_COMPLETE,
 	EVENT_AGGRO_SAY,
 	EVENT_PLAYER_PICKUP,
+	EVENT_POPUPRESPONSE,
 	
 	_LargestEventID
 } QuestEventID;
